<resources>
    <string name="app_name">Smart Accounting</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>

    <string name="search_hint">Search customer</string>
    <string name="search.results">Search results</string>

    <string name="customer.name">Customer name</string>
    <string name="customer.address">Customer address</string>
    <string name="customer.total.due">Total Due</string>

    <string name="date">Date</string>
    <string name="date.image.description">Calendar</string>
    <string name="total">Total</string>
    <string name="remarks">Remarks</string>
    <string name="amount">Amount</string>
    <string name="type">Type</string>

    <string name="filter.apply">Filter</string>
    <string name="filter.date.range.bad">Please select date.</string>

    <string name="purchase.create">Create</string>
    <string name="purchase.create.label">Create a purchase</string>
    <string name="purchase.edit.label">Edit purchase</string>
    <string name="purchase.create.existing.confirmation">Switch to creating purchase for existing customer?</string>
    <string name="purchase.type.sold">Sold</string>
    <string name="purchase.type.bought">Bought</string>

    <string name="credit.create">Create</string>
    <string name="credit.create.label">Create a transaction</string>
    <string name="credit.edit.label">Edit transaction</string>
    <string name="credit.create.existing.confirmation">Switch to creating transaction for existing customer?</string>
    <string name="credit.type.credit">Credit</string>
    <string name="credit.type.debit">Debit</string>

    <string name="purchase.item.name">Item</string>
    <string name="purchase.item.quantity">Quantity</string>
    <string name="purchase.item.rate">Rate</string>
    <string name="purchase.item.amount">Amount</string>
    <string name="purchase.item.add.more">Add more item</string>
    <string name="purchase.item.remove">Remove</string>

    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="search.results.empty.message">Nothing found</string>
    <string name="action_export">Backup data</string>
    <string name="action_import">Import data</string>
    <string name="action_logout">Logout</string>

    <string name="notification.backup.import.channel.name">Smart Accounting backup/import notifications</string>
    <string name="notification.backup.import.channel.description">Notifications about your data backup/import to/from Google Drive.</string>

    <string name="notification.backup.backing">Backing up database.</string>
    <string name="notification.backup.backing.detail">Your data is being backed up to your Google Drive.</string>
    <string name="notification.backup.done">Backup completed!</string>
    <string name="notification.backup.done.assure">Your data is now safely backed up.</string>
    <string name="notification.backup.failed">Backup failed.</string>
    <string name="notification.backup.failed.detail">There was an error during backup.</string>
    <string name="notification.backup.failed.detail.full">There was an error while backing up your data. Please make sure you are connected to the internet and have sufficient storage space in your phone.</string>

    <string name="notification.import.importing">Downloading latest backup.</string>
    <string name="notification.import.importing.detail">Downloading the latest backup from your Google Drive.</string>
    <string name="notification.import.done">Download completed</string>
    <string name="notification.import.assure">Your app is now up to date with your latest backup.</string>
    <string name="notification.import.nobackup">No Backup found.</string>
    <string name="notification.import.nobackup.detail">Please make sure you are connected to the internet and have existing backup in this account.</string>
    <string name="notification.import.failed">Download failed.</string>
    <string name="notification.import.failed.detail">There was an error during download.</string>
    <string name="notification.import.failed.detail.full">There was an error while downloading backup. Please make sure you are connected to the internet and have sufficient storage space in your phone.</string>

    <string name="import.start.message">Download started. Please check notifications.</string>
    <string name="import.cancelled.message">Cannot import while you have existing data.</string>

    <string name="export.start.message">Backup started. Please check notifications.</string>
    <string name="export_cancelled_message">Nothing to backup. Backup cancelled.</string>

    <string name="drive.api.connected">All set up here.</string>

    <string name="save">Save</string>
    <string name="transaction.delete.message">Balance is 0. Would you like to clear this account?</string>
    <string name="transaction.delete.confirm">Are you sure?</string>
    <string name="transaction.delete.confirm.message">This person\'s account will be deleted.</string>
    <string name="customer.edit">Edit customer</string>


</resources>
