<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
