<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/create_credit_customer_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/create_credit_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer.name"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/create_credit_customer_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/customer.address"
        app:met_floatingLabel="highlight" />

    <RadioGroup
        android:id="@+id/create_credit_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/create_credit_type_credit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit.type.credit" />

        <RadioButton
            android:id="@+id/create_credit_type_debit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit.type.debit" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/create_credit_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="3"
            android:hint="@string/date"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <ImageButton
            android:id="@+id/date_picker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/date.image.description"
            android:onClick="showDatePickerDialog"
            android:src="@android:drawable/ic_menu_my_calendar" />

    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/create_credit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/create_credit_remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/remarks"
        app:met_floatingLabel="highlight" />

    <Button
        android:id="@+id/credit_create"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/credit.create" />

</LinearLayout>
